# desktop

./: .editorconfig  .gitattributes  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  README.md  SECURITY.md  crowdin.yml  eslint.config.mjs  package-lock.json  package.json  requirements.txt  surfer.json  svgo.config.js
.devcontainer/: build.sh  devcontainer.json
.formal-git/: template
.github/: advanced-issue-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  check-candidate-release.yml  pr-test.yml  (+11 more)
.well-known/: funding-manifest-urls
docs/: contribute.md  live-folders-specs.md
locales/: language-maps  supported-languages  update-supported-languages.sh
prefs/: README.md
scripts/: build-and-install.ps1  check_rc_response.py  copy_language_pack.py  download-language-packs.sh  download_pgo_extended_corpus.py  fetch-formal-git-components.sh  gen_logo_png.ps1  import_external_tests.py  json_with_comments.py  mar_sign.sh  mar_verify.sh  prepare-flatpak-release.py  recalculate-patches.sh  remove-failed-jobs.sh  resize_logo.ps1  run_tests.py  update-surfer.sh  update_en_US_packs.py  update_external_patches.py  update_ff.py  update_service_dumps.py  update_ts_types.py
src/: -prettierignore.patch  -stylelintignore.patch  -stylelintrc-js.patch  eslint-file-globals-config-mjs.patch  eslint-ignores-config-mjs.patch  eslint-test-paths-config-mjs.patch
tools/virustotal-checker/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
tools/virustotal-checker/src/: app.h  hasher.cc  hasher.h  main.cc  scanner.cc  scanner.h
(+1039 files in other folders)
